Update generated documentation for version 0.9.6

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ redistribution for both commercial and non-commercial purposes. For more informa
 
         </div>
         <div class="span3">
-          <img src="/FsPickler/img/logo.png" alt="F# Project" style="width:150px;margin:10px" />  
+          <img src="/FsPickler/img/nessos.png" alt="F# Project" style="width:150px;margin:10px" />  
           <ul class="nav nav-list" id="menu" style="margin-top: 20px;">
             <li class="nav-header">FsPickler</li>
             <li><a href="/FsPickler/index.html">Home page</a></li>
