Update generated documentation for version 0.9.6

--- a/index.html
+++ b/index.html
@@ -35,8 +35,6 @@
           
 <h1>FsPickler</h1>
 
-<p>Documentation</p>
-
 <div class="row">
   <div class="span1"></div>
   <div class="span6">
@@ -71,8 +69,6 @@
 </td>
 </tr>
 </table>
-
-<p>Some more info</p>
 
 <h2>Samples &amp; documentation</h2>
 
@@ -119,7 +115,7 @@ redistribution for both commercial and non-commercial purposes. For more informa
             <li class="nav-header">FsPickler</li>
             <li><a href="/FsPickler/index.html">Home page</a></li>
             <li class="divider"></li>
-            <li><a href="http://nuget.com/packages/FsPickler">Get Library via NuGet</a></li>
+            <li><a href="http://www.nuget.org/packages/FsPickler">Get Library via NuGet</a></li>
             <li><a href="http://github.com/nessos/FsPickler">Source Code on GitHub</a></li>
             <li><a href="http://github.com/nessos/FsPickler/blob/master/LICENSE.txt">License</a></li>
             <li><a href="http://github.com/nessos/FsPickler/blob/master/RELEASE_NOTES.md">Release Notes</a></li>
