--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>FsPickler
+    <title>FsPickler : A serializer for .NET
 </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="A general-purpose serialization library for .NET"/>
@@ -33,7 +33,13 @@
       <div class="row">
         <div class="span9" id="main">
           
-<h1>FsPickler</h1>
+<h1>FsPickler : A serializer for .NET</h1>
+
+<p>FsPickler is a general-purpose serialization library that focuses on on robustness and performance. 
+It supports multiple, pluggable serialization formats including Xml, JSON and BSON.
+The library is based on and takes its name from the functional programming concept of 
+<a href="http://research.microsoft.com/en-us/um/people/akenn/fun/picklercombinators.pdf">pickler combinators</a>
+which has been adapted to accommodate the object oriented nature of the .NET framework.</p>
 
 <div class="row">
   <div class="span1"></div>
@@ -41,6 +47,8 @@
     <div class="well well-small" id="nuget">
       The FsPickler library can be <a href="https://nuget.org/packages/FsPickler">installed from NuGet</a>:
       <pre>PM> Install-Package FsPickler</pre>
+      <pre>PM> Install-Package FsPickler.Json</pre>
+      <pre>PM> Install-Package FsPickler.CSharp</pre>
     </div>
   </div>
   <div class="span1"></div>
@@ -48,7 +56,7 @@
 
 <h2>Example</h2>
 
-<p>This example demonstrates using a function defined in this sample library.</p>
+<p>This example demonstrates a basic serialization roundtrip using the library</p>
 
 <table class="pre"><tr><td class="lines"><pre class="fssnip">
 <span class="l">1: </span>
@@ -57,46 +65,32 @@
 <span class="l">4: </span>
 <span class="l">5: </span>
 <span class="l">6: </span>
+<span class="l">7: </span>
 </pre>
 </td>
 <td class="snippet"><pre class="fssnip">
 <span class="prep">#r</span> <span class="s">&quot;</span><span class="s">FsPickler</span><span class="s">.</span><span class="s">dll</span><span class="s">&quot;</span>
 <span class="k">open</span> <span onmouseout="hideTip(event, 'fs1', 1)" onmouseover="showTip(event, 'fs1', 1)" class="i">Nessos</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs2', 2)" onmouseover="showTip(event, 'fs2', 2)" class="i">FsPickler</span>
 
-<span class="k">let</span> <span onmouseout="hideTip(event, 'fs3', 3)" onmouseover="showTip(event, 'fs3', 3)" class="i">fsp</span> <span class="o">=</span> <span onmouseout="hideTip(event, 'fs4', 4)" onmouseover="showTip(event, 'fs4', 4)" class="i">FsPickler</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs5', 5)" onmouseover="showTip(event, 'fs5', 5)" class="i">CreateBinary</span>()
-<span class="k">let</span> <span onmouseout="hideTip(event, 'fs6', 6)" onmouseover="showTip(event, 'fs6', 6)" class="i">pickle</span> <span class="o">=</span> <span onmouseout="hideTip(event, 'fs3', 7)" onmouseover="showTip(event, 'fs3', 7)" class="i">fsp</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs7', 8)" onmouseover="showTip(event, 'fs7', 8)" class="i">Pickle</span> [<span onmouseout="hideTip(event, 'fs8', 9)" onmouseover="showTip(event, 'fs8', 9)" class="i">Some</span> <span class="n">1</span>; <span onmouseout="hideTip(event, 'fs9', 10)" onmouseover="showTip(event, 'fs9', 10)" class="i">None</span> ; <span onmouseout="hideTip(event, 'fs8', 11)" onmouseover="showTip(event, 'fs8', 11)" class="i">Some</span> <span class="o">-</span><span class="n">1</span>]
-<span onmouseout="hideTip(event, 'fs3', 12)" onmouseover="showTip(event, 'fs3', 12)" class="i">fsp</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs10', 13)" onmouseover="showTip(event, 'fs10', 13)" class="i">UnPickle</span><span class="o">&lt;</span><span onmouseout="hideTip(event, 'fs11', 14)" onmouseover="showTip(event, 'fs11', 14)" class="i">int</span> <span onmouseout="hideTip(event, 'fs12', 15)" onmouseover="showTip(event, 'fs12', 15)" class="i">option</span> <span onmouseout="hideTip(event, 'fs13', 16)" onmouseover="showTip(event, 'fs13', 16)" class="i">list</span><span class="o">&gt;</span> <span onmouseout="hideTip(event, 'fs6', 17)" onmouseover="showTip(event, 'fs6', 17)" class="i">pickle</span></pre>
+<span class="k">let</span> <span onmouseout="hideTip(event, 'fs3', 3)" onmouseover="showTip(event, 'fs3', 3)" class="i">binary</span> <span class="o">=</span> <span onmouseout="hideTip(event, 'fs4', 4)" onmouseover="showTip(event, 'fs4', 4)" class="i">FsPickler</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs5', 5)" onmouseover="showTip(event, 'fs5', 5)" class="i">CreateBinary</span>()
+
+<span class="k">let</span> <span onmouseout="hideTip(event, 'fs6', 6)" onmouseover="showTip(event, 'fs6', 6)" class="i">pickle</span> <span class="o">=</span> <span onmouseout="hideTip(event, 'fs3', 7)" onmouseover="showTip(event, 'fs3', 7)" class="i">binary</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs7', 8)" onmouseover="showTip(event, 'fs7', 8)" class="i">Pickle</span> [<span onmouseout="hideTip(event, 'fs8', 9)" onmouseover="showTip(event, 'fs8', 9)" class="i">Some</span> <span class="n">1</span>; <span onmouseout="hideTip(event, 'fs9', 10)" onmouseover="showTip(event, 'fs9', 10)" class="i">None</span> ; <span onmouseout="hideTip(event, 'fs8', 11)" onmouseover="showTip(event, 'fs8', 11)" class="i">Some</span> <span class="o">-</span><span class="n">1</span>]
+<span onmouseout="hideTip(event, 'fs3', 12)" onmouseover="showTip(event, 'fs3', 12)" class="i">binary</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs10', 13)" onmouseover="showTip(event, 'fs10', 13)" class="i">UnPickle</span><span class="o">&lt;</span><span onmouseout="hideTip(event, 'fs11', 14)" onmouseover="showTip(event, 'fs11', 14)" class="i">int</span> <span onmouseout="hideTip(event, 'fs12', 15)" onmouseover="showTip(event, 'fs12', 15)" class="i">option</span> <span onmouseout="hideTip(event, 'fs13', 16)" onmouseover="showTip(event, 'fs13', 16)" class="i">list</span><span class="o">&gt;</span> <span onmouseout="hideTip(event, 'fs6', 17)" onmouseover="showTip(event, 'fs6', 17)" class="i">pickle</span></pre>
 </td>
 </tr>
 </table>
 
-<h2>Samples &amp; documentation</h2>
-
-<p>The library comes with comprehensible documentation. 
-It can include a tutorials automatically generated from <code>*.fsx</code> files in <a href="https://github.com/fsprojects/FSharp.ProjectScaffold/tree/master/docs/content">the content folder</a>. 
-The API reference is automatically generated from Markdown comments in the library implementation.</p>
-
-<ul>
-<li><p><a href="tutorial.html">Tutorial</a> contains a further explanation of this sample library.</p></li>
-<li><p><a href="reference/index.html">API Reference</a> contains automatically generated documentation for all types, modules
-and functions in the library. This includes additional brief samples on using most of the
-functions.</p></li>
-</ul>
-
 <h2>Contributing and copyright</h2>
 
-<p>The project is hosted on <a href="https://github.com/fsprojects/FSharp.ProjectScaffold">GitHub</a> where you can <a href="https://github.com/fsprojects/FSharp.ProjectScaffold/issues">report issues</a>, fork 
-the project and submit pull requests. If you're adding new public API, please also 
-consider adding <a href="https://github.com/fsprojects/FSharp.ProjectScaffold/tree/master/docs/content">samples</a> that can be turned into a documentation. You might
-also want to read <a href="https://github.com/fsprojects/FSharp.ProjectScaffold/blob/master/README.md">library design notes</a> to understand how it works.</p>
+<p>The project is hosted on <a href="https://github.com/nessos/FsPickler">GitHub</a> where you can <a href="https://github.com/nessos/FsPickler/issues">report issues</a>, fork 
+the project and submit pull requests.</p>
 
-<p>The library is available under Public Domain license, which allows modification and 
-redistribution for both commercial and non-commercial purposes. For more information see the 
-<a href="https://github.com/fsprojects/FSharp.ProjectScaffold/blob/master/LICENSE.txt">License file</a> in the GitHub repository.</p>
+<p>The library is available under the MIT License. 
+For more information see the <a href="https://github.com/nessos/FsPickler/blob/master/License.md">License file</a> in the GitHub repository.</p>
 
 <div class="tip" id="fs1">namespace Nessos</div>
 <div class="tip" id="fs2">namespace Nessos.FsPickler</div>
-<div class="tip" id="fs3">val fsp : BinaryPickler<br /><br />Full name: Index.fsp</div>
+<div class="tip" id="fs3">val binary : BinaryPickler<br /><br />Full name: Index.binary</div>
 <div class="tip" id="fs4">type FsPickler =<br />&#160;&#160;private new : unit -&gt; FsPickler<br />&#160;&#160;static member Clone : t:&#39;T -&gt; &#39;T<br />&#160;&#160;static member ComputeHash : value:&#39;T * ?hashFactory:IHashStreamFactory -&gt; HashResult<br />&#160;&#160;static member ComputeSize : value:&#39;T -&gt; int64<br />&#160;&#160;static member CreateBinary : ?forceLittleEndian:bool * ?typeConverter:ITypeNameConverter -&gt; BinaryPickler<br />&#160;&#160;static member CreateXml : ?typeConverter:ITypeNameConverter * ?indent:bool -&gt; XmlPickler<br />&#160;&#160;static member GatherObjectsInGraph : graph:obj -&gt; obj []<br />&#160;&#160;static member GatherTypesInObjectGraph : graph:obj -&gt; Type []<br />&#160;&#160;static member GeneratePickler : unit -&gt; Pickler&lt;&#39;T&gt;<br />&#160;&#160;static member GeneratePickler : t:Type -&gt; Pickler<br />&#160;&#160;...<br /><br />Full name: Nessos.FsPickler.FsPickler</div>
 <div class="tip" id="fs5">static member FsPickler.CreateBinary : ?forceLittleEndian:bool * ?typeConverter:ITypeNameConverter -&gt; BinaryPickler</div>
 <div class="tip" id="fs6">val pickle : byte []<br /><br />Full name: Index.pickle</div>
