Update generated documentation for version 0.9.7

--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@ which has been adapted to accommodate the object oriented nature of the .NET fra
   <div class="span6">
     <div class="well well-small" id="nuget">
       The FsPickler library can be <a href="https://nuget.org/packages/FsPickler">installed from NuGet</a>:
-      <pre>PM> Install-Package FsPickler</pre>
-      <pre>PM> Install-Package FsPickler.Json</pre>
-      <pre>PM> Install-Package FsPickler.CSharp</pre>
+      <pre>PM> Install-Package FsPickler
+PM> Install-Package FsPickler.Json</pre>
     </div>
   </div>
   <div class="span1"></div>
