--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           
 <h1>FsPickler : A serializer for .NET</h1>
 
-<p>FsPickler is a general-purpose serialization library that focuses on on robustness and performance. 
+<p>FsPickler is a general-purpose serialization library that focuses on completeness and performance. 
 It supports multiple, pluggable serialization formats including Xml, JSON and BSON.
 The library is based on the functional programming concept of 
 <a href="http://research.microsoft.com/en-us/um/people/akenn/fun/picklercombinators.pdf">pickler combinators</a>
@@ -46,8 +46,8 @@ which has been adapted to accommodate the object oriented nature of the .NET fra
   <div class="span6">
     <div class="well well-small" id="nuget">
       The FsPickler library can be <a href="https://nuget.org/packages/FsPickler">installed from NuGet</a>:
-      <pre> PM> Install-Package FsPickler
-            PM> Install-Package FsPickler.Json</pre>
+      <pre>PM> Install-Package FsPickler
+PM> Install-Package FsPickler.Json</pre>
     </div>
   </div>
   <div class="span1"></div>
