Update generated documentation for version 0.9.7

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <p>FsPickler is a general-purpose serialization library that focuses on completeness and performance. 
 It supports multiple, pluggable serialization formats including Xml, JSON and BSON.
 The library is based on the functional programming concept of 
-<a href="http://research.microsoft.com/en-us/um/people/akenn/fun/picklercombinators.pdf">pickler combinators</a>
+<a href="http://lambda-the-ultimate.org/node/2243">pickler combinators</a>
 which has been adapted to accommodate the object oriented nature of the .NET framework.</p>
 
 <div class="row">
