Update generated documentation for version 0.9.7

--- a/index.html
+++ b/index.html
@@ -88,18 +88,18 @@ objects in the .NET framework. It is aimed at providing a foundation for
 communication of arbitrary objects between .NET processes.</p>
 
 <p>FsPickler is ideally suited for serializing:
-<em> Large and complex objects, such as dictionaries and trees.
-</em> Abstract classes, inherited classes, delegates and closures.
-<em> ISerializable, IDeserializationCallback or attribute-based serializable types.
-</em> Reflection types.
-<em> F# unions, records and quotations.
-</em> Cyclic objects.
-<em> Types with inaccessible properties or constructors.
-</em> Types unknown at compile time.</p>
+- Large and complex objects, such as dictionaries and trees.
+- Abstract classes, inherited classes, delegates and closures.
+- ISerializable, IDeserializationCallback or attribute-based serializable types.
+- Reflection types.
+- F# unions, records and quotations.
+- Cyclic objects.
+- Types with inaccessible properties or constructors.
+- Types unknown at compile time.</p>
 
 <p>FsPickler is NOT:
-<em> a general-purpose XML/JSON/BSON framework.
-</em> designed for cross-platform communication.</p>
+- a general-purpose XML/JSON/BSON framework.
+- designed for cross-platform communication.</p>
 
 <h2>Documentation &amp; Technical Overview</h2>
 
