Update generated documentation for version 0.9.7

--- a/index.html
+++ b/index.html
@@ -90,21 +90,21 @@ communication of arbitrary objects between .NET processes.</p>
 <p>FsPickler is ideally suited for serializing:</p>
 
 <ul>
-<li><p>Large and complex objects, such as dictionaries and trees.</p></li>
-<li><p>Abstract classes, inherited classes, delegates and closures.</p></li>
-<li><p>ISerializable, IDeserializationCallback or attribute-based serializable types.</p></li>
-<li><p>Reflection types.</p></li>
-<li><p>F# unions, records and quotations.</p></li>
-<li><p>Cyclic objects.</p></li>
-<li><p>Types with inaccessible properties or constructors.</p></li>
-<li><p>Types unknown at compile time.</p></li>
+<li>Large and complex objects, such as dictionaries and trees.</li>
+<li>Abstract classes, inherited classes, delegates and closures.</li>
+<li>ISerializable, IDeserializationCallback or attribute-based serializable types.</li>
+<li>Reflection types.</li>
+<li>F# unions, records and quotations.</li>
+<li>Cyclic objects.</li>
+<li>Types with inaccessible properties or constructors.</li>
+<li>Types unknown at compile time.</li>
 </ul>
 
 <p>FsPickler is NOT:</p>
 
 <ul>
-<li><p>a general-purpose XML/JSON/BSON framework.</p></li>
-<li><p>designed for cross-platform communication.</p></li>
+<li>a general-purpose XML/JSON/BSON framework.</li>
+<li>designed for cross-platform communication.</li>
 </ul>
 
 <h2>Documentation &amp; Technical Overview</h2>
