Update generated documentation for version 0.9.7

--- a/index.html
+++ b/index.html
@@ -90,14 +90,11 @@ communication of arbitrary objects between .NET processes.</p>
 <p>FsPickler is ideally suited for serializing:</p>
 
 <ul>
-<li>Large and complex objects, such as dictionaries and trees.</li>
+<li>Large and complex objects, such as dictionaries, trees and cyclic objects.</li>
 <li>Abstract classes, inherited classes, delegates and closures.</li>
 <li>ISerializable, IDeserializationCallback or attribute-based serializable types.</li>
-<li>Reflection types.</li>
 <li>F# unions, records and quotations.</li>
-<li>Cyclic objects.</li>
-<li>Types with inaccessible properties or constructors.</li>
-<li>Types unknown at compile time.</li>
+<li>Inaccessible types or types unknown at compile time.</li>
 </ul>
 
 <p>FsPickler is NOT:</p>
@@ -109,7 +106,7 @@ communication of arbitrary objects between .NET processes.</p>
 
 <h2>Documentation &amp; Technical Overview</h2>
 
-<p>TODO</p>
+<p>Coming soon.</p>
 
 <h2>Contributing and copyright</h2>
 
