Update generated documentation for version 0.9.7

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ communication of arbitrary objects between .NET processes.</p>
 
 <ul>
 <li><p><a href="tutorial.html">Tutorial</a> Contains a walkthrough of the basic functionalities found in the library.</p></li>
-<li><p><a href="overview.html">Technical Overview</a> Contains a description of the library implementation.</p></li>
+<li><p><a href="overview.html">Technical Overview</a> a walkthrough of the library's implementation details.</p></li>
 <li><p><a href="reference/index.html">API Reference</a> contains automatically generated documentation for all types, modules
 and functions in the library. This includes additional brief samples on using most of the functions.</p></li>
 </ul>
@@ -151,6 +151,9 @@ For more information see the <a href="https://github.com/nessos/FsPickler/blob/m
             
             <li class="nav-header">Getting started</li>
             <li><a href="/FsPickler/tutorial.html">Sample tutorial</a></li>
+
+            <li class="nav-header">Technical Overview</li>
+            <li><a href="/FsPickler/overview.html">Technical Overview</a></li>
 
             <li class="nav-header">Documentation</li>
             <li><a href="/FsPickler/reference/index.html">API Reference</a></li>
