Update generated documentation for version 0.9.7

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ PM> Install-Package FsPickler.CSharp</pre>
 <h2>Why FsPickler?</h2>
 
 <p>The principal motivation behind creating FsPickler is the need for a
-library that offers efficient, correct and complete support for serializable
+library that provides efficient, correct and complete serialization
 objects in the .NET framework. It is aimed at providing a foundation for
 communication of arbitrary objects between .NET processes.</p>
 
@@ -91,7 +91,7 @@ communication of arbitrary objects between .NET processes.</p>
 
 <ul>
 <li>Large and complex objects, such as dictionaries, trees and cyclic objects.</li>
-<li>Abstract classes, inherited classes, delegates and closures.</li>
+<li>Abstract classes, subtypes, nulls, delegates and closures.</li>
 <li>ISerializable, IDeserializationCallback or attribute-based serializable types.</li>
 <li>F# unions, records and quotations.</li>
 <li>Inaccessible types or types unknown at compile time.</li>
@@ -101,7 +101,7 @@ communication of arbitrary objects between .NET processes.</p>
 
 <ul>
 <li>a general-purpose XML/JSON/BSON framework.</li>
-<li>designed for cross-platform communication.</li>
+<li>a library designed for cross-platform communication.</li>
 </ul>
 
 <h2>Documentation &amp; Technical Overview</h2>
@@ -111,6 +111,8 @@ communication of arbitrary objects between .NET processes.</p>
 <ul>
 <li><p><a href="tutorial.html">Tutorial</a> Contains a walkthrough of the basic functionalities found in the library.</p></li>
 <li><p><a href="overview.html">Technical Overview</a> a walkthrough of the library's implementation details.</p></li>
+<li><p><a href="https://github.com/nessos/FsPickler/wiki/Performance">Performance</a> a collection of benchmarks comparing FsPickler
+to other serialization libraries.</p></li>
 <li><p><a href="reference/index.html">API Reference</a> contains automatically generated documentation for all types, modules
 and functions in the library. This includes additional brief samples on using most of the functions.</p></li>
 </ul>
@@ -150,10 +152,9 @@ For more information see the <a href="https://github.com/nessos/FsPickler/blob/m
             <li><a href="http://github.com/nessos/FsPickler/blob/master/RELEASE_NOTES.md">Release Notes</a></li>
             
             <li class="nav-header">Getting started</li>
-            <li><a href="/FsPickler/tutorial.html">Sample tutorial</a></li>
-
-            <li class="nav-header">Technical Overview</li>
+            <li><a href="/FsPickler/tutorial.html">FsPickler tutorial</a></li>
             <li><a href="/FsPickler/overview.html">Technical Overview</a></li>
+            <li><a href="https://github.com/nessos/FsPickler/wiki/Performance">Performance</a></li>
 
             <li class="nav-header">Documentation</li>
             <li><a href="/FsPickler/reference/index.html">API Reference</a></li>
