--- a/tutorial.html
+++ b/tutorial.html
@@ -179,9 +179,9 @@ or intermediate boxings.</p>
 <p>There are two kinds of picklers:</p>
 
 <ul>
-<li><p><em>primitive</em> or <em>atomic</em> picklers that are self-contained definitions 
+<li><p><em>Primitive</em> or <em>atomic</em> picklers that are self-contained definitions 
 for simple values like primitives or strings.</p></li>
-<li><p><em>composite</em> picklers which are derived from composition of simpler types.
+<li><p><em>Composite</em> picklers which are derived from composition of simpler types.
 Composite picklers are generated using <em>pickler combinators</em>; functions taking a collection
 of picklers as inputs yielding a composite result.</p></li>
 </ul>
@@ -867,10 +867,9 @@ by exploiting its pickler infrastructure. This can be done by calling the method
             <li><a href="http://github.com/nessos/FsPickler/blob/master/RELEASE_NOTES.md">Release Notes</a></li>
             
             <li class="nav-header">Getting started</li>
-            <li><a href="/FsPickler/tutorial.html">Sample tutorial</a></li>
-
-            <li class="nav-header">Technical Overview</li>
+            <li><a href="/FsPickler/tutorial.html">FsPickler tutorial</a></li>
             <li><a href="/FsPickler/overview.html">Technical Overview</a></li>
+            <li><a href="https://github.com/nessos/FsPickler/wiki/Performance">Performance</a></li>
 
             <li class="nav-header">Documentation</li>
             <li><a href="/FsPickler/reference/index.html">API Reference</a></li>
