Update generated documentation for version 0.9.7

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@ PM> Install-Package FsPickler.CSharp</pre>
 <h2>Why FsPickler?</h2>
 
 <p>The principal motivation behind creating FsPickler is the need for a
-library that provides efficient, correct and complete serialization
-objects in the .NET framework. It is aimed at providing a foundation for
-communication of arbitrary objects between .NET processes.</p>
+library that provides efficient, correct and complete serialization of
+objects in the CLR and mono runtime. It is aimed at providing a foundation for
+large-scale distributed computation that is based on the .NET framework.</p>
 
 <p>FsPickler is ideally suited for serializing:</p>
 
@@ -112,9 +112,9 @@ communication of arbitrary objects between .NET processes.</p>
 <li><p><a href="tutorial.html">Tutorial</a> Contains a walkthrough of the basic functionalities found in the library.</p></li>
 <li><p><a href="overview.html">Technical Overview</a> a walkthrough of the library's implementation details.</p></li>
 <li><p><a href="https://github.com/nessos/FsPickler/wiki/Performance">Performance</a> a collection of benchmarks comparing FsPickler
-to other serialization libraries.</p></li>
+to other established serialization libraries.</p></li>
 <li><p><a href="reference/index.html">API Reference</a> contains automatically generated documentation for all types, modules
-and functions in the library. This includes additional brief samples on using most of the functions.</p></li>
+and functions in the library.</p></li>
 </ul>
 
 <h2>Contributing and copyright</h2>
