Update generated documentation for version 0.9.7

--- a/tutorial.html
+++ b/tutorial.html
@@ -179,10 +179,10 @@ or intermediate boxings.</p>
 <p>There are two kinds of picklers:</p>
 
 <ul>
-<li><p><em>Primitive</em> or <em>atomic</em> picklers that are self-contained definitions 
+<li><p>Primitive or atomic picklers that are self-contained definitions 
 for simple values like primitives, strings or timespans.</p></li>
-<li><p><em>Composite</em> picklers which are derived from composition of simpler types.
-Composite picklers are generated using <em>pickler combinators</em>; functions taking a collection
+<li><p>Composite picklers which are derived from composition of simpler types.
+They are generated using <em>pickler combinators</em>, functions taking a collection
 of picklers as inputs yielding a composite result.</p></li>
 </ul>
 
