Update generated documentation for version 0.9.8

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <h1>FsPickler : A serializer for .NET</h1>
 
 <p>FsPickler is a general-purpose serialization library that focuses on completeness and performance. 
-It supports multiple, pluggable serialization formats including Xml, JSON and BSON.
+It supports multiple, pluggable serialization formats including Binary, Xml, JSON and BSON.
 The library is based on the functional programming concept of 
 <a href="http://lambda-the-ultimate.org/node/2243">pickler combinators</a>
 which has been adapted to accommodate the object oriented nature of the .NET framework.</p>
@@ -100,7 +100,7 @@ large-scale distributed computation that is based on the .NET framework.</p>
 <p>FsPickler is NOT:</p>
 
 <ul>
-<li>a general-purpose XML/JSON/BSON framework.</li>
+<li>a general-purpose Xml/JSON/BSON framework.</li>
 <li>a library designed for cross-platform communication.</li>
 </ul>
 
@@ -109,9 +109,9 @@ large-scale distributed computation that is based on the .NET framework.</p>
 <p>A collection of tutorials, technical overviews and API references of the library.</p>
 
 <ul>
-<li><p><a href="tutorial.html">Tutorial</a> Contains a walkthrough of the basic functionalities found in the library.</p></li>
-<li><p><a href="overview.html">Technical Overview</a> a walkthrough of the library's implementation details.</p></li>
-<li><p><a href="https://github.com/nessos/FsPickler/wiki/Performance">Performance</a> a collection of benchmarks comparing FsPickler
+<li><p><a href="tutorial.html">Tutorial</a> A short introduction to FsPickler.</p></li>
+<li><p><a href="overview.html">Technical Overview</a> A walkthrough of the library's implementation details.</p></li>
+<li><p><a href="https://github.com/nessos/FsPickler/wiki/Performance">Performance</a> Benchmarks comparing FsPickler
 to other established serialization libraries.</p></li>
 <li><p><a href="reference/index.html">API Reference</a> contains automatically generated documentation for all types, modules
 and functions in the library.</p></li>
