Update generated documentation for version 0.9.9

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ large-scale distributed computation that is based on the .NET framework.</p>
 <ul>
 <li>Large and complex objects, such as dictionaries, trees and cyclic objects.</li>
 <li>Abstract classes, subtypes, nulls, delegates and closures.</li>
-<li>ISerializable, IDeserializationCallback or attribute-based serializable types.</li>
+<li>ISerializable, DataContract or attribute-based serializable types.</li>
 <li>F# unions, records and quotations.</li>
 <li>Inaccessible types or types unknown at compile time.</li>
 </ul>
