Update generated documentation for version 0.9.9

--- a/index.html
+++ b/index.html
@@ -90,18 +90,18 @@ large-scale distributed computation that is based on the .NET framework.</p>
 <p>FsPickler is ideally suited for serializing:</p>
 
 <ul>
-<li>Large and complex objects, such as dictionaries, trees and cyclic objects.</li>
-<li>Abstract classes, subtypes, nulls, delegates and closures.</li>
-<li>ISerializable, DataContract or attribute-based serialization.</li>
-<li>F# unions, records and quotations.</li>
-<li>Inaccessible types or types unknown at compile time.</li>
+<li><p>Large and complex objects, such as dictionaries, trees and cyclic objects.</p></li>
+<li><p>Abstract classes, subtypes, nulls, delegates and closures.</p></li>
+<li><p>ISerializable, DataContract or attribute-based serialization.</p></li>
+<li><p>F# unions, records and quotations.</p></li>
+<li><p>Inaccessible types or types unknown at compile time.</p></li>
 </ul>
 
 <p>FsPickler is NOT:</p>
 
 <ul>
-<li>a general-purpose Xml/JSON/BSON framework.</li>
-<li>a library designed for cross-platform communication.</li>
+<li><p>a general-purpose Xml/JSON/BSON framework.</p></li>
+<li><p>a library designed for cross-platform communication.</p></li>
 </ul>
 
 <h2>Documentation &amp; Technical Overview</h2>
