Update generated documentation for version 0.9.9

--- a/tutorial.html
+++ b/tutorial.html
@@ -434,7 +434,7 @@ see this <a href="https://gist.github.com/t0yv0/6834822">gist</a> for some Coq c
 </tr>
 </table>
 
-<h2><a id="custom-picklers">Generating custom picklers in type definitions</a></h2>
+<h2>Generating custom picklers in type definitions</h2>
 
 <p>FsPickler can be instructed to use custom pickler definitions for given types
 using the following design pattern:</p>
