Update generated documentation for version 0.9.9

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ large-scale distributed computation that is based on the .NET framework.</p>
 <ul>
 <li><p><a href="tutorial.html">Tutorial</a> A short introduction to FsPickler.</p></li>
 <li><p><a href="overview.html">Technical Overview</a> A walkthrough of the library's implementation details.</p></li>
-<li><p><a href="https://github.com/nessos/FsPickler/wiki/Performance">Performance</a> Benchmarks comparing FsPickler
+<li><p><a href="benchmarks.html">Performance</a> Benchmarks comparing FsPickler
 to other established serialization libraries.</p></li>
 <li><p><a href="reference/index.html">API Reference</a> contains automatically generated documentation for all types, modules
 and functions in the library.</p></li>
