Update generated documentation for version 0.9.9

--- a/benchmarks.html
+++ b/benchmarks.html
@@ -108,6 +108,10 @@ Libraries not appearing in charts failed to serialize the tested objects.</p>
 
 <img src="benchmarks/size/intarray.png" />
 
+<h3>Pair Array (10000)</h3>
+
+<img src="benchmarks/size/pairarray.png" />
+
 <h3>3D float Array (100x100x100)</h3>
 
 <img src="benchmarks/size/array.png" />
