Update generated documentation for version 0.9.9

--- a/benchmarks.html
+++ b/benchmarks.html
@@ -108,7 +108,7 @@ Libraries not appearing in charts failed to serialize the tested objects.</p>
 
 <img src="benchmarks/size/intarray.png" />
 
-<h3>Pair Array (10000)</h3>
+<h3>Pair Array (10000 elements)</h3>
 
 <img src="benchmarks/size/pairarray.png" />
 
@@ -116,7 +116,7 @@ Libraries not appearing in charts failed to serialize the tested objects.</p>
 
 <img src="benchmarks/size/array.png" />
 
-<h3>F# Integer List (1000 elements)</h3>
+<h3>F# List of Integers (1000 elements)</h3>
 
 <img src="benchmarks/size/intlist.png" />
 
