--- a/benchmarks.html
+++ b/benchmarks.html
@@ -160,7 +160,7 @@ Libraries not appearing in charts failed to serialize the tested objects.</p>
             <li class="nav-header">Getting started</li>
             <li><a href="/FsPickler/tutorial.html">FsPickler tutorial</a></li>
             <li><a href="/FsPickler/overview.html">Technical Overview</a></li>
-            <li><a href="https://github.com/nessos/FsPickler/wiki/Performance">Performance</a></li>
+            <li><a href="/FsPickler/benchmarks.html">Performance</a></li>
 
             <li class="nav-header">Documentation</li>
             <li><a href="/FsPickler/reference/index.html">API Reference</a></li>
