--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ For more information see the <a href="https://github.com/nessos/FsPickler/blob/m
             <li class="nav-header">Getting started</li>
             <li><a href="/FsPickler/tutorial.html">FsPickler tutorial</a></li>
             <li><a href="/FsPickler/overview.html">Technical Overview</a></li>
-            <li><a href="https://github.com/nessos/FsPickler/wiki/Performance">Performance</a></li>
+            <li><a href="/FsPickler/benchmarks.html">Performance</a></li>
 
             <li class="nav-header">Documentation</li>
             <li><a href="/FsPickler/reference/index.html">API Reference</a></li>
