--- a/overview.html
+++ b/overview.html
@@ -53,7 +53,7 @@
             <li class="nav-header">Getting started</li>
             <li><a href="/FsPickler/tutorial.html">FsPickler tutorial</a></li>
             <li><a href="/FsPickler/overview.html">Technical Overview</a></li>
-            <li><a href="https://github.com/nessos/FsPickler/wiki/Performance">Performance</a></li>
+            <li><a href="/FsPickler/benchmarks.html">Performance</a></li>
 
             <li class="nav-header">Documentation</li>
             <li><a href="/FsPickler/reference/index.html">API Reference</a></li>
