Update generated documentation for version 0.9.9

--- a/benchmarks.html
+++ b/benchmarks.html
@@ -75,13 +75,21 @@ Benchmarks are indicative and in no way scientific.</p>
 
 <img src="benchmarks/time/binaryTree.png" />
 
-<h3>F# list</h3>
+<h3>F# list of integers</h3>
 
 <img src="benchmarks/time/list.png" />
+
+<h3>F# list of tuples</h3>
+
+<img src="benchmarks/time/pairList.png" />
 
 <h3>Array 3D (float, 200 x 200 x 200)</h3>
 
 <img src="benchmarks/time/array3D.png" />
+
+<h3>F# mutual recursive types</h3>
+
+<img src="benchmarks/time/fsharpForest.png" />
 
 <h3>F# Quotation</h3>
 
