--- a/index.html
+++ b/index.html
@@ -141,7 +141,9 @@ For more information see the <a href="https://github.com/nessos/FsPickler/blob/m
 
         </div>
         <div class="span3">
-          <img src="/FsPickler/img/nessos.png" alt="F# Project" style="width:150px;margin:10px" />  
+          <a target="_blank" href="http://www.nessos.gr/">
+			<img src="/FsPickler/img/nessos.png" alt="F# Project" style="width:150px;margin:10px" /> 
+		  </a>
           <ul class="nav nav-list" id="menu" style="margin-top: 20px;">
             <li class="nav-header">FsPickler</li>
             <li><a href="/FsPickler/index.html">Home page</a></li>
