--- a/tutorial.html
+++ b/tutorial.html
@@ -854,7 +854,9 @@ by exploiting its pickler infrastructure. This can be done by calling the method
 
         </div>
         <div class="span3">
-          <img src="/FsPickler/img/nessos.png" alt="F# Project" style="width:150px;margin:10px" />  
+          <a target="_blank" href="http://www.nessos.gr/">
+			<img src="/FsPickler/img/nessos.png" alt="F# Project" style="width:150px;margin:10px" /> 
+		  </a>
           <ul class="nav nav-list" id="menu" style="margin-top: 20px;">
             <li class="nav-header">FsPickler</li>
             <li><a href="/FsPickler/index.html">Home page</a></li>
