--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@ For more information see the <a href="https://github.com/nessos/FsPickler/blob/m
             <li><a href="http://github.com/nessos/FsPickler/blob/master/RELEASE_NOTES.md">Release Notes</a></li>
 
             <li class="nav-header">Documentation</li>
-            <li><a href="/FsPickler/tutorial.html">FsPickler tutorial</a></li>
+            <li><a href="/FsPickler/tutorial.html">Tutorial</a></li>
+            <li><a href="/FsPickler/benchmarks.html">Performance</a></li>
             <li class="divider"></li>
             <li><a href="/FsPickler/overview.html">Technical Overview</a></li>
-            <li><a href="/FsPickler/benchmarks.html">Performance</a></li>
             <li><a href="/FsPickler/reference/index.html">API Reference</a></li>
           </ul>
         </div>
