Update generated documentation for version 0.9.11

--- a/benchmarks.html
+++ b/benchmarks.html
@@ -83,7 +83,7 @@ Benchmarks are indicative and in no way scientific.</p>
 
 <img src="benchmarks/time/pairList.png" />
 
-<h3>Array 3D (float, 200 x 200 x 200)</h3>
+<h3>3D float Array (200 x 200 x 200)</h3>
 
 <img src="benchmarks/time/array3D.png" />
 
